--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-8 col-md-offset-2">
+      <app-new-account (accountAdded)="OnAccoutAdded($event)"></app-new-account>
       <app-account
         *ngFor="let acc of accounts; let i = index"
         [account]="acc"
